objects/CRM_Timecard_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Auto__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this record auto generated?</description>
        <inlineHelpText>Is this record auto generated?</inlineHelpText>
        <label>Auto?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Project_Work_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRM Project Work Item</label>
        <referenceTo>CRM_Project_Item__c</referenceTo>
        <relationshipName>CRM_Timecard_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_Timecard__c</fullName>
        <label>CRM Timecard</label>
        <referenceTo>CRM_Timecard__c</referenceTo>
        <relationshipName>CRM_Timecard_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_1__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Identifies the amount of work done on Day 1 for that week</description>
        <inlineHelpText>Identifies the amount of work done on Day 1 for that week</inlineHelpText>
        <label>Day 1</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Day_2__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Identifies the amount of work done on Day 2 for that week</description>
        <inlineHelpText>Identifies the amount of work done on Day 2 for that week</inlineHelpText>
        <label>Day 2</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Day_3__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Identifies the amount of work done on Day 3 for that week</description>
        <inlineHelpText>Identifies the amount of work done on Day 3 for that week</inlineHelpText>
        <label>Day 3</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>CRM_Project_Work_Item__r.CRM_Project__r.Project_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <formula>CRM_Timecard__r.Team_Member__r.FirstName &amp; ' ' &amp; CRM_Timecard__r.Team_Member__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Member</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Represents the type of work</description>
        <inlineHelpText>Represents the type of work</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cases</fullName>
                    <default>true</default>
                    <label>Cases</label>
                </value>
                <value>
                    <fullName>Support/Transactional Work</fullName>
                </value>
                <value>
                    <fullName>Projects</fullName>
                </value>
                <value>
                    <fullName>Others - Dev Related</fullName>
                </value>
                <value>
                    <fullName>Others - Admin Related</fullName>
                </value>
                <value>
                    <fullName>Others - Meetings</fullName>
                </value>
                <value>
                    <fullName>On Duty - Travel</fullName>
                </value>
                <value>
                    <fullName>On Duty - CU</fullName>
                </value>
                <value>
                    <fullName>On Duty - Team Building</fullName>
                </value>
                <value>
                    <fullName>Innovation/Ideation</fullName>
                </value>
                <value>
                    <fullName>Proof of Concept/Demo</fullName>
                </value>
                <value>
                    <fullName>Training/KT</fullName>
                </value>
                <value>
                    <fullName>PTO/Holiday</fullName>
                </value>
                <value>
                    <fullName>CPQ Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CRM_Timecard_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Item_Name__c</fullName>
        <formula>CRM_Project_Work_Item__r.Subject__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Item Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Closed_Cases_Week__c</fullName>
        <description>Identifies the number of closed cases in this week.</description>
        <inlineHelpText>Identifies the number of closed cases in this week.</inlineHelpText>
        <label># of Closed Cases (Week)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <description>Represents one entry under a given timecard</description>
    <label>Timecard Entry</label>
    <nameField>
        <label>Entry #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Timecard Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>